# pyansys-sound

./: .codespellignorewords  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  My_Saved_SoundComposer_Project.scn  PR_changes.txt  README.md  README.rst  _config.yml  another-page.md  essai_soundcomposer_name.py  index.html  index.md  pyproject.toml  requirements_build.txt  requirements_tests.txt  robots.txt  setup.py  sitemap.xml  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  docker_cleanup.yml  label.yml  pages.yml  python_version_check.yml
Docker/: Dockerfile
doc/: .vale.ini  make.bat
doc/changelog.d/: 100.dependencies.md  101.dependencies.md  102.dependencies.md  103.fixed.md  104.added.md  105.dependencies.md  107.dependencies.md  108.dependencies.md  109.dependencies.md  110.dependencies.md  111.maintenance.md  112.documentation.md  113.documentation.md  114.fixed.md  115.dependencies.md  116.dependencies.md  117.dependencies.md  118.dependencies.md  119.maintenance.md  120.dependencies.md  121.dependencies.md  122.dependencies.md  123.dependencies.md  124.dependencies.md  125.dependencies.md  126.dependencies.md  127.dependencies.md  129.fixed.md  133.dependencies.md  134.dependencies.md  135.fixed.md  136.documentation.md  138.maintenance.md  139.documentation.md  140.dependencies.md  141.dependencies.md  142.dependencies.md  143.dependencies.md  144.dependencies.md  146.dependencies.md  (+360 more)
doc/source/: conf.py  contribute.rst  docker_containerization.rst  getting_started.rst  index.rst  user_guide.rst
docker/: Dockerfile.windows  README.rst
examples/: 001_initialize_server_and_deal_with_license.py  001_load_resample_amplify_write_wav_files.py  001_load_write_wav_files.py  002_compute_stft.py  002_demo_example_sound.py  002_load_resample_amplify_write_wav_files.py  003_compute_stft.py  003_isolate_orders.py  004_initialize_server_and_deal_with_license.py  004_isolate_orders.py  004_xtract_module.py  005_xtract_feature.py  005_xtract_module.py  006_calculate_PR_and_TNR.py  007_calculate_psychoacoustic_indicators.py  008_calculate_levels.py  009_calculate_tonality_indicators.py  010_sound_composer_load_project.py  011_sound_composer_create_project.py  012_predict_listening_test_ratings.py  013_calculate_fractional_octave_levels.py  013_octaves_comparison.py  014_load_uff_data.py  Aircraft_Levels_vs_time_Results.csv  Fan_Levels_vs_time_Results.csv  My_SoundComposer_Project.scn  Overall_Results.csv  README.rst  XXX_test_sound_classes.py
tests/: conftest.py  test_example_helpers.py  test_metadata.py  test_pydpf_sound.py  test_server_helpers.py  test_sound_helpers.py
tests/data/: 20241031_SoundComposerProjectForDpfSoundTesting.scn  20250130_SoundComposerProjectForDpfSoundTesting_valid.scn  AnsysSound Spectrum v3 - nominal - Pa2PerHz_2024R2_20240418.txt  AnsysSound Spectrum v4 - nominal - dBAPerHz_2026R1_20250829.txt  AnsysSound Spectrum v4 - nominal - dBA_2026R1_20250829.txt  AnsysSound_BBN dBSPL OCTAVE Constants.txt  AnsysSound_BBN dBSPLperHz NARROWBAND v2_2024R2_20241128.txt  AnsysSound_BBN dBSPLperHz NARROWBAND v2_40values_2024R2_20241128.txt  AnsysSound_BBN_MultipleParameters Pa2PerHz Narrowband v2_2024R2_20240418.txt  AnsysSound_BBN_MultipleParameters dBSPL Octave v2_2024R2_20240418.txt  AnsysSound_FRF_2024R2_20241206.txt  AnsysSound_FRF_bad_2024R2_20241206.txt  AnsysSound_OrderFreq dBA v1_26R1_20251021.txt  AnsysSound_OrderFreq dBSPL v1_26R1_20251021.txt  AnsysSound_OrderFreq dBSPL v1_nok_rpm_26R1_20251021.txt  AnsysSound_OrderFreq dBSPL v1_nok_several_orders_26R1_20251021.txt  AnsysSound_Orders Pa v1_2024R2_20241203.txt  AnsysSound_Orders V2_2024R2_20241203.txt  AnsysSound_Orders dBSPL v1_10_rpm_values_40_orders_2024R2_20241203.txt  AnsysSound_Orders dBSPL v1_2024R2_20241203.txt  AnsysSound_Orders_MultipleParameters dBSPL - InvertedContols_2024R2_20241205.txt  AnsysSound_Orders_MultipleParameters dBSPL_2024R2_20241205.txt  AnsysSound_Orders_MultipleParameters dBSPL_many_values_2024R2_20241205.txt  AnsysSound_Orders_MultipleParameters_FromAccelWithTacho_2024R2_20241205.txt  AnsysSound_Spectrum_v3_-_nominal_-_dBSPLperHz_2024R2_20241121.txt  Overall_level_from_PSD_nonregular.txt  Overall_level_from_PSD_regular.txt  SoundPowerLevelProject_hemisphere_2025R1_20243008.spw  VRX_Waterfall_2024R2_20241203.xml  flute_nonUnitaryCalib_as_text_2024R2_20241125.txt
tests/tests_power_spectral_density/: test_power_spectral_density.py
tests/tests_psychoacoustics/: test_psychoacoustics_fluctuation_strength.py  test_psychoacoustics_loudness.py  test_psychoacoustics_loudness_ansi_s3_4.py  test_psychoacoustics_loudness_iso532_1_stationary.py  test_psychoacoustics_loudness_iso_532_1_stationary.py  test_psychoacoustics_loudness_iso_532_1_time_varying.py  test_psychoacoustics_loudness_iso_532_2.py  test_psychoacoustics_loudness_vs_time.py  test_psychoacoustics_parent.py  test_psychoacoustics_prominence_ratio.py  test_psychoacoustics_prominence_ratio_for_orders_over_time.py  test_psychoacoustics_roughness.py  test_psychoacoustics_roughness_ecma_418_2.py  test_psychoacoustics_sharpness.py  test_psychoacoustics_sharpness_din_45692.py  test_psychoacoustics_sharpness_din_45692_over_time.py  test_psychoacoustics_sharpness_over_time.py  test_psychoacoustics_spectral_centroid.py  test_psychoacoustics_tonality_aures.py  test_psychoacoustics_tonality_din_45681.py  test_psychoacoustics_tonality_ecma_418_2.py  test_psychoacoustics_tonality_iso1996_2.py  test_psychoacoustics_tonality_iso_1996_2.py  test_psychoacoustics_tonality_iso_1996_2_over_time.py  test_psychoacoustics_tonality_iso_ts_20065.py  test_psychoacoustics_tone_to_noise_ratio.py  test_psychoacoustics_tone_to_noise_ratio_for_orders.py  test_psychoacoustics_tone_to_noise_ratio_for_orders_over_time.py
tests/tests_signal_processing/: test_signal_processing_filter.py
tests/tests_signal_utilities/: test_signal_utilities_abstract.py  test_signal_utilities_apply_gain.py  (+12 more)
version/: index.html
(+3802 files in other folders)
