[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-sound-core"
version = "0.2.0"
description = "A Python wrapper for Ansys DPF Sound."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-dpf-core==0.13.8",
    "matplotlib>=3.8.2,<4",
    "platformdirs>=3.6.0",
    "requests>=2.30.0",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
tests = [
    "matplotlib==3.10.3",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-dependency==0.6.0",
    "platformdirs==4.3.8",
    "regex==2024.11.6",
]

doc = [
    "Sphinx==8.2.3",
    "ansys-sphinx-theme==1.5.3",
    "numpydoc==1.9.0",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.19.0",
    "sphinx-design==0.6.1",
    "vtk==9.4.2",
    "trame==3.10.2",
    "trame_vtk==2.9.0",
    "pyvista==0.45.2",
    "pypandoc==1.15",
    "jupyter-sphinx==0.5.3",
    "sphinx-autobuild==2024.10.3",
    "platformdirs==4.3.8"
]

[tool.flit.module]
name = "ansys.sound.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.sound.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.sound.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]

[tool.towncrier]
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/pyansys-sound/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/pyansys-sound/pull/{issue})"
package = "ansys.sound.core"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
