[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-sound-core"
version = "0.2.dev1"
description = "A Python wrapper for Ansys DPF Sound."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]
dependencies = [
    "ansys-dpf-core>=0.13.8,<1",
    "ansys-tools-common>=0.1.0,<1",
    "matplotlib>=3.8.2,<4",
    "platformdirs>=3.6.0",
    "requests>=2.30.0"
]

[project.optional-dependencies]
full = [
    "ansys-dpf-core==0.16.1",
    "ansys-tools-common==0.5.0",
    "matplotlib==3.10.9",
    "pyuff==2.5.3",
    "platformdirs==4.10.0",
    "requests==2.34.2",
    "scipy==1.14.1; python_version<'3.11'",
    "scipy==1.17.1; python_version>='3.11'",
    "scikit-learn==1.7.2"
]

tests = [
    "ansys-dpf-core==0.16.1",
    "ansys-tools-common==0.5.0",
    "matplotlib==3.10.9",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-dependency==0.6.1",
    "platformdirs==4.10.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "scipy==1.14.1; python_version<'3.11'",
    "scipy==1.17.1; python_version>='3.11'"
]

doc = [
    "ansys-dpf-core==0.16.1",
    "Sphinx==8.2.3",
    "ansys-sphinx-theme==1.8.2",
    "numpydoc==1.10.0",
    "pyuff==2.5.3",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.21.0",
    "sphinx-design==0.6.1",
    "vtk==9.6.2",
    "trame==3.13.2",
    "trame_vtk==2.11.12",
    "pyvista==0.48.4",
    "pypandoc==1.17",
    "jupyter-sphinx==0.5.3",
    "sphinx-autobuild==2024.10.3",
    "platformdirs==4.10.0",
    "requests==2.34.2",
    "scikit-learn==1.7.2"
]

[tool.flit.module]
name = "ansys.sound.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.sound.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.sound.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]

[tool.towncrier]
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/pyansys-sound/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/pyansys-sound/pull/{issue})"
package = "ansys.sound.core"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

